--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
           <h2 class="visually-hidden">наші переваги</h2>
           <ul class="list">
             <li class="pref-text">
-              <svg class="picture" width="65.32" height="70">
-                <use href="./images/sprite.svg#antenna"></use>
-              </svg>
+              <div class="plate">
+                <svg class="picture" width="65.32" height="70">
+                  <use href="./images/sprite.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="list-title">увага до деталей</h3>
               <p class="list-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -84,9 +86,11 @@
               </p>
             </li>
             <li class="pref-text">
-              <svg class="picture" width="65.32" height="70">
-                <use href="./images/sprite.svg#clock"></use>
-              </svg>
+              <div class="plate">
+                <svg class="picture" width="65.32" height="70">
+                  <use href="./images/sprite.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="list-title">пунктуальність</h3>
               <p class="list-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -94,18 +98,22 @@
               </p>
             </li>
             <li class="pref-text">
-              <svg class="picture" width="65.32" height="70">
-                <use href="./images/sprite.svg#diagram"></use>
-              </svg>
+              <div class="plate">
+                <svg class="picture" width="65.32" height="70">
+                  <use href="./images/sprite.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="list-title">планування</h3>
               <p class="list-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="pref-text">
-              <svg class="picture" width="65.32" height="70">
-                <use href="./images/sprite.svg#astronaut"></use>
-              </svg>
+              <div class="plate">
+                <svg class="picture" width="65.32" height="70">
+                  <use href="./images/sprite.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="list-title">сучасні технології</h3>
               <p class="list-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -464,89 +472,91 @@
     <!-- Підвал -->
 
     <footer class="footer">
-      <div class="container">
-        <a class="link" href="./index.html">
-          <span class="footer-logocolor">Web</span
-          ><span class="footer-logo">Studio</span>
-        </a>
-        <address class="address">
-          <ul class="address-list">
-            <li class="footer-item">
+      <div class="container footer-container">
+        <div class="address-wrapper">
+          <a class="link" href="./index.html">
+            <span class="footer-logocolor">Web</span
+            ><span class="footer-logo">Studio</span>
+          </a>
+          <address class="address">
+            <ul class="address-list">
+              <li class="footer-item">
+                <a
+                  class="address-link"
+                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="contacts-link" href="tel:++380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-wrapper">
+          <p class="call">приєднуйтесь</p>
+          <ul class="socials list">
+            <li class="social-item">
               <a
-                class="address-link"
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="social-link-footer"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="instagram"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="contacts-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a class="contacts-link" href="tel:++380961111111"
-                >+38 096 111 11 11</a
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-      <div class="social-wrapper">
-        <p class="call">приєднуйтесь</p>
-        <ul class="socials list">
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://instagram.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="instagram"
-            >
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://twitter.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="twitter"
-            >
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/sprite.svg#twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://facebook.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="facebook"
-            >
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/sprite.svg#facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-item">
-            <a
-              class="social-link-footer"
-              href="https://linkedin.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="linkedin"
-            >
-              <svg class="social-icon" width="20" height="20">
-                <use href="./images/sprite.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </footer>
   </body>
