--- a/portfolio.html
+++ b/portfolio.html
@@ -25,20 +25,32 @@
             <span class="logocolor">Web</span><span class="logo">Studio</span>
           </a>
           <ul class="list-nav">
-            <li class="list-item"><a class="nav-link" href="./index.html">Студія</a></li>
-            <li class="list-item"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="list-item">
+              <a class="nav-link" href="./index.html">Студія</a>
+            </li>
+            <li class="list-item">
+              <a class="nav-link" href="./portfolio.html">Портфоліо</a>
+            </li>
             <li class="list-item"><a class="nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
         <!-- Контактні дані -->
         <ul class="contacts-list">
           <li class="list-item">
-            <a class="link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link-mail" href="mailto:info@devstudio.com">
+              <svg class="envelope" width="16" height="18">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link-tel" href="tel:+380961111111">
+              <svg class="smartphone" width="16" height="18">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -70,7 +82,7 @@
           <ul class="list photo-list">
             <li class="photo">
               <img
-                src="./img-portfolio/img-1.jpg"
+                src="./images/img-portfolio/img-1.jpg"
                 alt="вебсайт Технокряк"
                 width="370"
               />
@@ -80,7 +92,11 @@
               </div>
             </li>
             <li class="photo">
-              <img src="./img-portfolio/img-2.jpg" alt="Постер" width="370" />
+              <img
+                src="./images/img-portfolio/img-2.jpg"
+                alt="Постер"
+                width="370"
+              />
               <div class="photo-items">
                 <h3 class="photo-subtitle">Постер New Orlean vs Golden Star</h3>
                 <p class="photo-text">Дизайн</p>
@@ -88,7 +104,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-3.jpg"
+                src="./images/img-portfolio/img-3.jpg"
                 alt="Постер Ресторан"
                 width="370"
               />
@@ -99,7 +115,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-4.jpg"
+                src="./images/img-portfolio/img-4.jpg"
                 alt="Проект Прайм"
                 width="370"
               />
@@ -110,7 +126,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-5.jpg"
+                src="./images/img-portfolio/img-5.jpg"
                 alt="Проект Боксез"
                 width="370"
               />
@@ -121,7 +137,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-6.jpg"
+                src="./images/img-portfolio/img-6.jpg"
                 alt="вебсайт Інспірейшн"
                 width="370"
               />
@@ -132,7 +148,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-7.jpg"
+                src="./images/img-portfolio/img-7.jpg"
                 alt="Дизайн Видання"
                 width="370"
               />
@@ -143,7 +159,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-8.jpg"
+                src="./images/img-portfolio/img-8.jpg"
                 alt="Проект Лаб"
                 width="370"
               />
@@ -154,7 +170,7 @@
             </li>
             <li class="photo">
               <img
-                src="./img-portfolio/img-9.jpg"
+                src="./images/img-portfolio/img-9.jpg"
                 alt="Розвито Бізнесу"
                 width="370"
               />
@@ -169,32 +185,91 @@
     </main>
     <!-- Підвал -->
     <footer class="footer">
-      <div class="container">
-        <a class="link" href="./index.html">
-          <span class="footer-logocolor">Web</span
-          ><span class="footer-logo">Studio</span>
-        </a>
-        <address class="address">
-          <ul class="address-list">
-            <li>
+      <div class="container footer-container">
+        <div class="address-wrapper">
+          <a class="link" href="./index.html">
+            <span class="footer-logocolor">Web</span
+            ><span class="footer-logo">Studio</span>
+          </a>
+          <address class="address">
+            <ul class="address-list">
+              <li class="footer-item">
+                <a
+                  class="address-link"
+                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="contacts-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a class="contacts-link" href="tel:++380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social-wrapper">
+          <p class="call">приєднуйтесь</p>
+          <ul class="socials list">
+            <li class="social-item">
               <a
-                class="address-link"
-                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                >м. Київ, пр-т Лесі Українки, 26</a
+                class="social-link-footer"
+                href="https://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="instagram"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contacts-link" href="mailto:info@example.com"
-                >info@example.com</a
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a class="contacts-link" href="tel:++380961111111"
-                >+38 096 111 11 11</a
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
               >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                class="social-link-footer"
+                href="https://linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+              >
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
