--- a/portfolio.html
+++ b/portfolio.html
@@ -81,103 +81,123 @@
 
           <ul class="list photo-list">
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-1.jpg"
-                alt="вебсайт Технокряк"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Технокряк</h3>
-                <p class="photo-text">Веб-сайт</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-1.jpg"
+                  alt="вебсайт Технокряк"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Технокряк</h3>
+                  <p class="photo-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-2.jpg"
-                alt="Постер"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Постер New Orlean vs Golden Star</h3>
-                <p class="photo-text">Дизайн</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-2.jpg"
+                  alt="Постер"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="photo-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-3.jpg"
-                alt="Постер Ресторан"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Ресторан Seafood</h3>
-                <p class="photo-text">Додаток</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-3.jpg"
+                  alt="Постер Ресторан"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Ресторан Seafood</h3>
+                  <p class="photo-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-4.jpg"
-                alt="Проект Прайм"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Проєкт Prime</h3>
-                <p class="photo-text">Маркетинг</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-4.jpg"
+                  alt="Проект Прайм"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Проєкт Prime</h3>
+                  <p class="photo-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-5.jpg"
-                alt="Проект Боксез"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Проєкт Boxes</h3>
-                <p class="photo-text">Додаток</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-5.jpg"
+                  alt="Проект Боксез"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Проєкт Boxes</h3>
+                  <p class="photo-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-6.jpg"
-                alt="вебсайт Інспірейшн"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Inspiration has no Borders</h3>
-                <p class="photo-text">Веб-сайт</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-6.jpg"
+                  alt="вебсайт Інспірейшн"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Inspiration has no Borders</h3>
+                  <p class="photo-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-7.jpg"
-                alt="Дизайн Видання"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Видання Limited Edition</h3>
-                <p class="photo-text">Дизайн</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-7.jpg"
+                  alt="Дизайн Видання"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Видання Limited Edition</h3>
+                  <p class="photo-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-8.jpg"
-                alt="Проект Лаб"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Проєкт LAB</h3>
-                <p class="photo-text">Маркетинг</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-8.jpg"
+                  alt="Проект Лаб"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Проєкт LAB</h3>
+                  <p class="photo-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="photo">
-              <img
-                src="./images/img-portfolio/img-9.jpg"
-                alt="Розвито Бізнесу"
-                width="370"
-              />
-              <div class="photo-items">
-                <h3 class="photo-subtitle">Growing Business</h3>
-                <p class="photo-text">Додаток</p>
-              </div>
+              <a class="projects-item" href="">
+                <img
+                  src="./images/img-portfolio/img-9.jpg"
+                  alt="Розвито Бізнесу"
+                  width="370"
+                />
+                <div class="photo-items">
+                  <h3 class="photo-subtitle">Growing Business</h3>
+                  <p class="photo-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
